--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "qs": "^6.10.1"
   },
   "publishConfig": {
     "access": "public",
